# FirstSentenceGuess

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  db.json  demo-db.json  docker-compose.yml  package-lock.json  tailwind.config.js
src/: actions.rs  book.rs  config.rs  db.rs  endpoints.rs  handlers.rs  index.rs  main.rs  messages.rs  requests.rs
static/: functions.js  home.html  index-new.html  index.html  style.css  styles-out.css  styles.css  test.html
templates/: correct.html  finish.html  give-up.html  help1-avail.html  help2-avail.html  help2.html  index.html  sentence2.html  wrong.html
templates/en/: messages.toml
templates/pl/: correct.html  finish.html  give-up.html  help1-avail.html  help1.html  help2-avail.html  index.html  messages.toml  sentence1.html  sentence2.html  sentence3.html  wrong.html
