[package]
name = "FSG2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
serde = { version = "1.0.89", features = ["derive"] }
rand = "0.8"
serde_json = "1.0.107"
tera = "1.19.1"
